// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tags With links renders correctly 1`] = `
<div>
  <div
    class="css-1i7cdx8-boxStyles"
  >
    <h2
      class="css-433uqb-boxStyles-Text"
    >
      Tags:
    </h2>
    <ul
      class="css-15pioji-boxStyles"
    >
      <li
        class="css-79i25n-boxStyles"
      >
        <span
          class="css-k8ctd8-boxStyles"
        >
          <a
            class="css-1as6xcj-TextLink-boxStyles"
            href="#"
          >
            Foo
          </a>
        </span>
      </li>
      <li
        class="css-79i25n-boxStyles"
      >
        <span
          class="css-k8ctd8-boxStyles"
        >
          <a
            class="css-1as6xcj-TextLink-boxStyles"
            href="#"
          >
            Bar
          </a>
        </span>
      </li>
      <li
        class="css-79i25n-boxStyles"
      >
        <span
          class="css-k8ctd8-boxStyles"
        >
          <a
            class="css-1as6xcj-TextLink-boxStyles"
            href="#"
          >
            Baz
          </a>
        </span>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Tags With onRemove renders correctly 1`] = `
<div>
  <div
    class="css-1i7cdx8-boxStyles"
  >
    <h2
      class="css-433uqb-boxStyles-Text"
    >
      Tags:
    </h2>
    <ul
      class="css-15pioji-boxStyles"
    >
      <li
        class="css-79i25n-boxStyles"
      >
        <span
          class="css-198oft9-boxStyles"
        >
          <a
            class="css-1as6xcj-TextLink-boxStyles"
            href="#"
          >
            Foo
          </a>
          <button
            aria-label="Remove Foo"
            class="css-96drji-BaseButton-boxStyles-TagRemoveButton"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="css-1krnro2-Icon"
              clip-rule="evenodd"
              focusable="false"
              height="24"
              role="img"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <line
                x1="18"
                x2="6"
                y1="6"
                y2="18"
              />
              <line
                x1="6"
                x2="18"
                y1="6"
                y2="18"
              />
            </svg>
          </button>
        </span>
      </li>
      <li
        class="css-79i25n-boxStyles"
      >
        <span
          class="css-198oft9-boxStyles"
        >
          <a
            class="css-1as6xcj-TextLink-boxStyles"
            href="#"
          >
            Bar
          </a>
          <button
            aria-label="Remove Bar"
            class="css-96drji-BaseButton-boxStyles-TagRemoveButton"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="css-1krnro2-Icon"
              clip-rule="evenodd"
              focusable="false"
              height="24"
              role="img"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <line
                x1="18"
                x2="6"
                y1="6"
                y2="18"
              />
              <line
                x1="6"
                x2="18"
                y1="6"
                y2="18"
              />
            </svg>
          </button>
        </span>
      </li>
      <li
        class="css-79i25n-boxStyles"
      >
        <span
          class="css-198oft9-boxStyles"
        >
          <a
            class="css-1as6xcj-TextLink-boxStyles"
            href="#"
          >
            Baz
          </a>
          <button
            aria-label="Remove Baz"
            class="css-96drji-BaseButton-boxStyles-TagRemoveButton"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="css-1krnro2-Icon"
              clip-rule="evenodd"
              focusable="false"
              height="24"
              role="img"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <line
                x1="18"
                x2="6"
                y1="6"
                y2="18"
              />
              <line
                x1="6"
                x2="18"
                y1="6"
                y2="18"
              />
            </svg>
          </button>
        </span>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Tags Without links renders correctly 1`] = `
<div>
  <div
    class="css-1i7cdx8-boxStyles"
  >
    <h2
      class="css-433uqb-boxStyles-Text"
    >
      Tags:
    </h2>
    <ul
      class="css-15pioji-boxStyles"
    >
      <li
        class="css-79i25n-boxStyles"
      >
        <span
          class="css-7ymoik-boxStyles"
        >
          <span
            class="css-79i25n-boxStyles"
          >
            Foo
          </span>
        </span>
      </li>
      <li
        class="css-79i25n-boxStyles"
      >
        <span
          class="css-7ymoik-boxStyles"
        >
          <span
            class="css-79i25n-boxStyles"
          >
            Bar
          </span>
        </span>
      </li>
      <li
        class="css-79i25n-boxStyles"
      >
        <span
          class="css-7ymoik-boxStyles"
        >
          <span
            class="css-79i25n-boxStyles"
          >
            Baz
          </span>
        </span>
      </li>
    </ul>
  </div>
</div>
`;
